2011-01-28  Stefano Lattarini  <stefano.lattarini@gmail.com>

	configure: look for a lex program to be used by the testsuite
	This will allow the testcases requiring a 'lex' program to run also
	with vendor/legacy lex implementations, not only with 'flex'.
	* configure.ac: Look for a lex program, using AC_CHECK_PROGS.
	* tests/defs.in: New required entry 'lex'.
	($LEX): Let the user override the lex program to be used by the
	testsuite.
	* tests/cond35.test ($required): Require 'lex', not 'flex'.
	* tests/cond36.test: Likewise.
	* tests/lexv3.test: Likewise.
	* tests/lexv3.test: Likewise.
	* tests/silent-lex-gcc.test: Likewise.
	* tests/silent-lex-generic.test: Likewise.
	* tests/silent-many-gcc.test: Likewise.
	* tests/silent-many-generic.test:likewise.
	* tests/lexvpath.test: Likewise, and fix typo in comments.

2011-01-22   Stefano Lattarini  <stefano.lattarini@gmail.com>

	configure: look for a yacc program to be used by the testsuite
	Instead of forcing the user to manually export 'YACC' in the
	testsuite to use a non-bison yacc, we now look for a yacc program
	at configure time, and use that as the default in the testsuite.
	* configure.ac: Look for a yacc program, using AC_CHECK_PROGS.
	* tests/defs.in: Updated to use the value of $YACC precomputed by
	configure, unless the user overrides that in the environment.

2011-01-22   Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: more coverage on yacc/lex silent-rules, plus minor cleanups
	* tests/silent-yacc-gcc.test: Add sanity checks verifying that the
	generated Makefile.in files really contains the non-generic rules
	we expect.  Do not redundantly manually remove files we know to be
	already removed "make maintainer-clean".
	(Makefile.am): Ensure we cover also non-generic yacc rules, by
	setting target-specific YFLAGS.
	(sub/Makefile.am): Likewise.
	* tests/silent-yacc-generic.test: Likewise.
	* tests/silent-lex-gcc.test: Likewise, but with LFLAGS instead of
	YFLAGS.