@@ -213,23 +213,19 @@ do
       ;;
     lex)
       if test x"$LEX" = x"false"; then
-        # No lex program was found at configure time, or the user has
-        # explicitly told he doesn't want a lex program to be used.
-        echo "$me: \$LEX is \"false\", skipping test" >&2
+        echo "$me: no working \$LEX found at configure time," \
+                  "or explicitly disabled" >&2
         exit 77
       fi
       export LEX
       ;;
     yacc)
       if test x"$YACC" = x"false"; then
-        # No yacc program was found at configure time, or the user has
-        # explicitly told he doesn't want a yacc program to be used.
-        echo "$me: \$YACC is \"false\", skipping test" >&2
+        echo "$me: no working \$YACC found at configure time," \
+                  "or explicitly disabled" >&2
         exit 77
-      else
-        # Make YACC available to configure by exporting it.
-        export YACC
       fi
+      export YACC
       ;;
     # Generic case: the tool must support --version.
     *)
