@@ -1,3 +1,11 @@
+2011-01-29  Stefano Lattarini  <stefano.lattarini@gmail.com>
+	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	tests init: better messages for 'yacc' and 'lex' requirements
+	* tests/defs.in: Give better diagnostic messages when a test must
+	be skipped to the unavailability of yacc or lex program.  Also,
+	improve syncing between code for requiring yacc and lex.
+
 2011-01-28  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
 	configure: look for a lex program to be used by the testsuite
